<resources>
    <string name="app_name">PHC</string>
    <string name="title_activity_main">PHC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="get_started_button">Get Started</string>
    <string name="hhs">Positive Health Check is a service mark of the U.S. Department of Health &amp; Human Services (HHS)</string>
    <!-- Navigation drawer strings -->
    <string name="about">About</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="select_location">Select Location</string>
    <string name="select_location_subtext"><i>For clinic use only</i></string>
    <string name="faqs">FAQs</string>

    <string name="title_activity_phc_webapp"></string>

    <!-- alt text -->
    <string name="phc_logo_alt_text">Positive Health Check logo</string>

    <!--Alert Dialog strings-->
    <string name="bandwidth_alert_title">Bandwidth Usage</string>
    <string name="bandwidth_alert_msg">Positive Health Check (PHC) uses streaming media to show a
        series of videos which are part of the intervention. Please connect to a local WiFi network
        before beginning PHC to avoid potential charges from data usage on your cellular data plan.</string>
    <string name="bandwidth_alert_dont_show_again">Don\'t show this message again</string>

    <!-- Menu Item Content strings -->
    <string name="about_content">
        Positive Health Check (PHC) is a product of the Centers for Disease
        Control and Prevention (CDC),a branch of the Department of Health and Human Services. PHC
        was developed for people living with HIV (PLWH) to supplement their HIV primary care provider
        visits. It aims to improve health outcomes of PLWH, by promoting treatment initiation,
        medication adherence, retention in care, sexual risk reduction, and reducing injection drug
        use behavior. The intervention also provides information about the prevention of
        mother-to-child transmission.\n\nAn interactive tool, PHC provides patients tailored
        information based on their responses to questions and topic selections. It was developed
        for patients that would like to receive additional information and strategies to support
        their medical care and treatment, regardless of length of time since diagnosis.\n\nPositive
        Health Check is currently only accessible to patients with a valid study ID and password as
        provided by designated clinics working with CDC in the PHC Randomized Control Trial.
    </string>

    <string name="disclaimer_content">Positive Health Check (PHC) uses streaming media to show a
        series of videos which are part of the intervention. Please connect to a local WiFi network
        before beginning PHC to avoid potential charges from data usage on your cellular data plan.
        \n\nPositive Health Check was designed to help people manage HIV. The information included in
        Positive Health Check was developed with the input of people who have HIV, and doctors who
        care for them. The doctors shown in Positive Health Check are actors.
        \n\nThe material embodied in this software is provided to you “AS-IS” and without warranty
        of any kind, express, implied or otherwise, including without limitation, any warranty of
        fitness for a particular purpose. In no event shall the Centers for Disease Control and
        Prevention (CDC) or The United States (U.S.) government be liable to you or anyone else for
        any direct, special, incidental, indirect or consequential damages whatsoever, including
        without limitation, loss of use, savings or revenue, or the claims of third parties,
        whether or not CDC or the U.S. government has been advised of the possibility of such loss,
        however caused and on any theory of liability, arising out of or in connection with the
        possession, use or performance of this software.
    </string>
    <string name="privacy_policy_content">CDC does not collect or store any personal information
        when you use Positive Health Check on any device. The study ID and password provided to PHC
        users by clinics participating in the PHC Randomized Control Trial, along with the
        intervention data, are not connected with patient names at CDC. Participating clinics
        maintain their own separate, secure records that allow them to connect study IDs to
        patients within their clinics.\n\nAdditional information about CDC’s privacy policy can be
        found on CDC intranet link here: http://www.cdc.gov/other/mobileprivacypolicy.html</string>

   <string name="faq_content"><b>Q:</b> How can I get a study ID/password to access Positive Health
       Check?\n<b>A:</b> Clinic staff from clinics participating in the CDC Randomized Control
       Trial will provide qualifying patients credentials to access Positive Health Check.
       \n\n<b>Q:</b> What if I can\’t remember my study ID and/or password?\n<b>A:</b> Contact the
       clinic that issued your study ID/password to provide you your ID or reset password.
       \n\n<b>Q:</b> What should I do if the intervention freezes-up or stops working?
       \n<b>A:</b> If you are in the intervention, hit the “Refresh” button to restart content on
       the screen.\n\n<b>Q:</b> How do I get the patient handout created by Positive Health Check if
       I complete the intervention outside the clinic?\n<b>A:</b> Clinic staff will collect the
       patient handout printed at the clinic and place it in a secure area with your clinic records
       to be given to you at your next visit.\n\n<b>Q:</b> Who can see the information that I provide
       in PHC?\n<b>A:</b> Authorized clinic staff working on this project will be able to access
       information you provide in the intervention and link it to you. Other project staff outside
       of the clinic will be able to view information you provided in the intervention but only by
       your study ID (your name is not included).\n\n<b>Q:</b> What if my study ID and/or password
       aren\’t working?\n<b>A:</b> PHC was designed to be used by patients multiple times but no
       sooner than 2 months from their last visit to the intervention. If you receive the following
       messages, a description of the error that occurred is provided:\n\t\t· “Study ID and
       password don\’t match”- the password wasn\’t entered correctly.\n\t\t· “Study ID is invalid”-
       the Study ID entered was incorrect.\n\t\t· “Please contact clinic staff for assistance”-
       contact clinic staff and they will advise you of when you can log in again or activate your
       session. Please contact the clinic that assigned you your ID for assistance if you are unable
       to recall the correct study ID and/or password.\n\n<b>Q:</b> I downloaded the app, but how can
       I join the study?\n<b>A:</b> Only a small number of clinics were selected to work with
       Positive Health Check (PHC) at this time. At a later time, PHC will be assessed for broader
       use and access by other patients. Stay tuned.\n\n<b>Q:</b> Who do I contact if I have questions
       about the content presented in PHC?\n<b>A:</b> Talk with your doctor or nurse at the clinic
       that issued you your study ID to address any questions you may have.\n\n<b>Q:</b> How do I
       access the Extra Info site for more information?\n<b>A:</b> The Extra Info site is available
       for 7 days after you complete each intervention session. You can contact your clinic if you
       require specific information or assistance.
   </string>
</resources>
