<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="gov.cdc.phc.MainActivity"
    android:background="@color/phc_bg"
    tools:showIn="@layout/app_bar_main"
    android:id="@+id/main_relative">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageView2"
            android:contentDescription="@string/phc_logo_alt_text"
            android:src="@drawable/phc_320x199"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started_button"
            android:layout_gravity="center_horizontal"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:paddingStart="150dp"
            android:paddingEnd="150dp"
            android:textSize="28sp"
            android:layout_marginTop="50dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/getStarted"/>
        <TextView
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hhs"/>

    </LinearLayout>
</RelativeLayout>
